Prepravljen ucitavanje hosta za  aplikaciju i na frontendu i backendu

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=auctionapp
 server.port=8080
-spring.datasource.url=jdbc:postgresql://<HOST>:5432/auctionapp
+spring.datasource.url=jdbc:postgresql://${HOST:localhost}:5432/auctionapp
 spring.datasource.username=${POSTGRESQL_DB_DEV_USERNAME}
 spring.datasource.password=${POSTGRESQL_DB_DEV_PASSWORD}
-
-# Dialect tells Hibernate that I'm working with PostgreSQL so he doesn't have to guess
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Before implementing custom login, meant for Spring Security
 spring.security.user.name=admin
