Errors with registration fixed on backend: using builder instead of new keyword for user and casting correctly when saving enum in postgres

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=auctionapp
 server.port=8080
-spring.datasource.url=jdbc:postgresql://${HOST:localhost}:5432/auctionapp
+spring.datasource.url=jdbc:postgresql://${HOST:localhost}:5432/auctionapp?stringtype=unspecified
 spring.datasource.username=${POSTGRESQL_DB_DEV_USERNAME}
 spring.datasource.password=${POSTGRESQL_DB_DEV_PASSWORD}
 
