Setup production connection to Supabase Postgres deployment

--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -1,2 +1,7 @@
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
+
+spring.datasource.url=jdbc:postgresql://${PROD_HOST}:5432/postgres?stringtype=unspecified
+# spring.datasource.url=jdbc:postgresql://db.obknwsqtdnzsrubkbtui.supabase.co:5432/postgres?stringtype=unspecified
+spring.datasource.username=${POSTGRESQL_DB_PROD_USERNAME}
+spring.datasource.password=${POSTGRESQL_DB_PROD_PASSWORD}
