--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=auctionapp
 server.port=8080
-spring.datasource.url=jdbc:postgresql://${HOST:localhost}:5432/auctionapp?stringtype=unspecified
-spring.datasource.username=${POSTGRESQL_DB_DEV_USERNAME}
-spring.datasource.password=${POSTGRESQL_DB_DEV_PASSWORD}
 
 # Before implementing custom login, meant for Spring Security
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
