1. Added Dockerfile for server deployment, 2. Changed jwt secret to load from .env

--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -3,6 +3,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Logs to the console SQL commands run by Hibernate
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://${HOST:localhost}:5432/auctionapp?stringtype=unspecified
+spring.datasource.url=jdbc:postgresql://${POSTGRESQL_DB_DEV_HOST:localhost}:5432/auctionapp?stringtype=unspecified
 spring.datasource.username=${POSTGRESQL_DB_DEV_USERNAME:postgres}
 spring.datasource.password=${POSTGRESQL_DB_DEV_PASSWORD:postgres}
