--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.config.import=optional:file:.env[.properties]
